--- a/imagens/macros-pgf.tex
+++ b/imagens/macros-pgf.tex
@@ -1,4 +1,4 @@
-\usepackage{pgfplots,bm}
+\usepackage{pgfplots}
 \usetikzlibrary{plotmarks}
 \usetikzlibrary{scopes,shapes,shadows,calc,arrows,shapes.symbols,automata,decorations.pathmorphing,backgrounds,fit,positioning}
 
