--- a/treeParesKappa.tex
+++ b/treeParesKappa.tex
@@ -2,554 +2,538 @@
 child {node [decision] {\#classes}
 child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
 child {node [outcome] {
-\textbf{HTUmah} RFw: 5\\
-EERent SVM: 4\\
-DWmah SVM: 2\\
-TUman RFw: 2\\
-EERent 5NN: 2\\
-TUeuc RFw: 2\\
-DWman RFw: 2\\
-\textbf{HTUeuc} SVM: 2\\
-TUmah CIELM: 2\\
-% DWman RFw: 2\\
-% \textbf{HTUeuc} SVM: 2\\
-% TUmah CIELM: 2\\
-% DWeuc RFw: 1\\
-% \textbf{SGmulti} 5NN: 1\\
-% EERacc RFw: 1\\
-% TUman 5NN: 1\\
-% EERacc SVM: 1\\
-% Mar CIELM: 1\\
-% DWmah RFw: 1\\
-% \textbf{HTUeuc} RFw: 1\\
-% DWman CIELM: 1\\
-% \textbf{HTUman} RFw: 1\\
-% Ent CIELM: 1\\
-% \textbf{HTUman} SVM: 1\\
+\textbf{HTUmah}-RFw: 5\\
+EERent-SVM: 4\\
+DWman-RFw: 2\\
+\textbf{HTUeuc}-SVM: 2\\
+EERent-5NN: 2\\
+TUmah-CIELM: 2\\
+DWmah-SVM: 2\\
+TUeuc-RFw: 2\\
+TUman-RFw: 2\\
+% Mar-CIELM: 1\\
+% DWman-CIELM: 1\\
+% EERacc-RFw: 1\\
+% Ent-CIELM: 1\\
+% \textbf{HTUman}-SVM: 1\\
+% \textbf{HTUman}-CIELM: 1\\
+% TUeuc-NB: 1\\
+% \textbf{HTUmah}-5NN: 1\\
+% \textbf{HTUeuc}-5NN: 1\\
+% TUman-5NN: 1\\
+% DWeuc-RFw: 1\\
+% \textbf{HTUman}-5NN: 1\\
+% DWeuc-CIELM: 1\\
+% Ent-5NN: 1\\
 % Clu: 1\\
 % Rnd: 1\\
-% DWeuc CIELM: 1\\
-% Mar 5NN: 1\\
-% DWman SVM: 1\\
-% \textbf{HTUeuc} 5NN: 1\\
-% \textbf{HTUman} CIELM: 1\\
-% \textbf{HTUman} 5NN: 1\\
-% TUeuc NB: 1\\
-% TUmah RFw: 1\\
-% \textbf{HTUmah} 5NN: 1\\
-% Ent 5NN: 1\\
-% EERent RFw: 0\\
+% Mar-5NN: 1\\
+% EERacc-SVM: 1\\
+% \textbf{HTUman}-RFw: 1\\
+% \textbf{SGmulti}-5NN: 1\\
+% DWman-SVM: 1\\
+% \textbf{HTUeuc}-RFw: 1\\
+% TUmah-RFw: 1\\
+% DWmah-CIELM: 0\\
+% \textbf{HTUmah}-NB: 0\\
 % SVMsim: 0\\
-% \textbf{HTUeuc} NB: 0\\
-% \textbf{HTUman} C4.5w: 0\\
-% TUmah C4.5w: 0\\
-% TUman NB: 0\\
+% Ent-NB: 0\\
+% TUeuc-SVM: 0\\
+% TUmah-NB: 0\\
 % \textbf{ATUman}: 0\\
-% \textbf{HTUmah} C4.5w: 0\\
-% TUeuc CIELM: 0\\
-% TUeuc C4.5w: 0\\
-% Ent SVM: 0\\
-% TUmah 5NN: 0\\
-% QBCRFw RFw: 0\\
-% DWman 5NN: 0\\
-% TUmah SVM: 0\\
-% TUman SVM: 0\\
-% \textbf{HTUmah} CIELM: 0\\
-% Ent NB: 0\\
-% \textbf{HTUman} NB: 0\\
-% \textbf{SGmulti} RFw: 0\\
+% EERacc-NB: 0\\
+% QBCRFw-RFw: 0\\
+% \textbf{HTUman}-C4.5w: 0\\
+% DWeuc-SVM: 0\\
+% \textbf{HTUman}-NB: 0\\
+% TUman-SVM: 0\\
+% Mar-NB: 0\\
+% \textbf{SGmulti}-RFw: 0\\
+% \textbf{HTUmah}-SVM: 0\\
+% DWeuc-NB: 0\\
 % SVMbal: 0\\
-% EERent NB: 0\\
-% \textbf{HTUmah} SVM: 0\\
-% EERent CIELM: 0\\
-% Mar RFw: 0\\
+% TUmah-C4.5w: 0\\
+% \textbf{HTUmah}-C4.5w: 0\\
+% Mar-RFw: 0\\
+% DWman-5NN: 0\\
+% TUeuc-CIELM: 0\\
 % \textbf{ATUmah}: 0\\
-% EERent C4.5w: 0\\
-% DWeuc NB: 0\\
-% TUeuc SVM: 0\\
-% \textbf{HTUeuc} C4.5w: 0\\
-% DWeuc 5NN: 0\\
-% TUmah NB: 0\\
-% TUman C4.5w: 0\\
-% TUeuc 5NN: 0\\
-% Mar NB: 0\\
-% DWmah CIELM: 0\\
-% EERacc NB: 0\\
-% TUman CIELM: 0\\
-% Ent RFw: 0\\
-% DWeuc SVM: 0\\
+% TUmah-SVM: 0\\
+% DWeuc-5NN: 0\\
+% EERent-CIELM: 0\\
+% \textbf{HTUeuc}-NB: 0\\
+% Ent-SVM: 0\\
+% TUman-CIELM: 0\\
+% EERent-RFw: 0\\
+% Ent-RFw: 0\\
+% TUman-C4.5w: 0\\
+% TUeuc-C4.5w: 0\\
+% \textbf{HTUmah}-CIELM: 0\\
+% EERent-NB: 0\\
+% TUman-NB: 0\\
+% TUeuc-5NN: 0\\
+% \textbf{HTUeuc}-C4.5w: 0\\
+% EERent-C4.5w: 0\\
 % \textbf{ATUeuc}: 0\\
-% \textbf{HTUmah} NB: 0\\
+% TUmah-5NN: 0\\
 demais ($\leq 1$): 24} edge from parent node [cond] {$\leq42.2$}}
 child {node [outcome] {
-EERent RFw: 5\\
-DWeuc RFw: 4\\
-TUman RFw: 4\\
-\textbf{HTUeuc} RFw: 4\\
-TUeuc RFw: 4\\
-\textbf{HTUman} RFw: 4\\
-DWman RFw: 4\\
-Ent RFw: 4\\
-% Ent RFw: 4\\
-% DWmah RFw: 3\\
-% TUman SVM: 3\\
-% Mar RFw: 3\\
-% \textbf{HTUmah} RFw: 3\\
-% TUmah RFw: 3\\
-% DWman 5NN: 2\\
-% \textbf{HTUman} NB: 2\\
-% \textbf{SGmulti} RFw: 2\\
-% TUmah CIELM: 2\\
-% DWeuc SVM: 2\\
+EERent-RFw: 5\\
+DWman-RFw: 4\\
+DWeuc-RFw: 4\\
+Ent-RFw: 4\\
+\textbf{HTUman}-RFw: 4\\
+\textbf{HTUeuc}-RFw: 4\\
+TUeuc-RFw: 4\\
+TUman-RFw: 4\\
+DWmah-RFw: 3\\
+TUman-SVM: 3\\
+\textbf{HTUmah}-RFw: 3\\
+Mar-RFw: 3\\
+TUmah-RFw: 3\\
+DWeuc-SVM: 2\\
+\textbf{HTUman}-NB: 2\\
+\textbf{SGmulti}-RFw: 2\\
+TUmah-CIELM: 2\\
+DWman-5NN: 2\\
+% \textbf{HTUmah}-NB: 1\\
 % SVMsim: 1\\
-% \textbf{HTUman} C4.5w: 1\\
-% DWmah SVM: 1\\
+% TUeuc-SVM: 1\\
 % \textbf{ATUman}: 1\\
-% \textbf{HTUmah} C4.5w: 1\\
-% EERent SVM: 1\\
-% Ent SVM: 1\\
-% QBCRFw RFw: 1\\
-% TUmah SVM: 1\\
+% QBCRFw-RFw: 1\\
+% \textbf{HTUman}-C4.5w: 1\\
+% \textbf{HTUman}-SVM: 1\\
+% \textbf{HTUman}-CIELM: 1\\
+% \textbf{HTUmah}-5NN: 1\\
+% \textbf{HTUeuc}-SVM: 1\\
+% \textbf{HTUeuc}-5NN: 1\\
+% DWmah-SVM: 1\\
+% DWeuc-NB: 1\\
+% EERent-SVM: 1\\
 % SVMbal: 1\\
-% \textbf{HTUman} SVM: 1\\
-% Mar 5NN: 1\\
-% DWman SVM: 1\\
-% EERent C4.5w: 1\\
-% \textbf{HTUeuc} 5NN: 1\\
-% DWeuc NB: 1\\
-% TUeuc SVM: 1\\
-% \textbf{HTUman} CIELM: 1\\
-% DWeuc 5NN: 1\\
-% \textbf{HTUeuc} SVM: 1\\
-% TUeuc 5NN: 1\\
-% \textbf{HTUmah} 5NN: 1\\
-% Ent 5NN: 1\\
-% DWmah CIELM: 1\\
+% \textbf{HTUmah}-C4.5w: 1\\
+% Ent-5NN: 1\\
+% Mar-5NN: 1\\
+% TUmah-SVM: 1\\
+% DWeuc-5NN: 1\\
+% Ent-SVM: 1\\
+% TUeuc-5NN: 1\\
+% DWman-SVM: 1\\
+% EERent-C4.5w: 1\\
 % \textbf{ATUeuc}: 1\\
-% \textbf{HTUmah} NB: 1\\
-% \textbf{HTUeuc} NB: 0\\
-% \textbf{SGmulti} 5NN: 0\\
-% EERacc RFw: 0\\
-% TUman 5NN: 0\\
-% TUmah C4.5w: 0\\
-% TUman NB: 0\\
-% EERacc SVM: 0\\
-% TUeuc CIELM: 0\\
-% TUeuc C4.5w: 0\\
-% TUmah 5NN: 0\\
-% Mar CIELM: 0\\
-% EERent 5NN: 0\\
-% DWman CIELM: 0\\
-% \textbf{HTUmah} CIELM: 0\\
-% Ent NB: 0\\
-% Ent CIELM: 0\\
-% EERent NB: 0\\
-% \textbf{HTUmah} SVM: 0\\
-% EERent CIELM: 0\\
+% Ent-NB: 0\\
+% Mar-CIELM: 0\\
+% DWman-CIELM: 0\\
+% EERacc-RFw: 0\\
+% TUmah-NB: 0\\
+% Ent-CIELM: 0\\
+% EERacc-NB: 0\\
+% Mar-NB: 0\\
+% TUeuc-NB: 0\\
+% \textbf{HTUmah}-SVM: 0\\
+% EERent-5NN: 0\\
+% TUman-5NN: 0\\
+% TUmah-C4.5w: 0\\
+% \textbf{HTUman}-5NN: 0\\
+% DWeuc-CIELM: 0\\
 % Clu: 0\\
 % Rnd: 0\\
-% DWeuc CIELM: 0\\
+% TUeuc-CIELM: 0\\
 % \textbf{ATUmah}: 0\\
-% \textbf{HTUeuc} C4.5w: 0\\
-% TUmah NB: 0\\
-% \textbf{HTUman} 5NN: 0\\
-% TUman C4.5w: 0\\
-% TUeuc NB: 0\\
-% Mar NB: 0\\
-% EERacc NB: 0\\
-% TUman CIELM: 0\\
-demais ($\leq 3$): 51} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$\leq4$}}
+% EERent-CIELM: 0\\
+% EERacc-SVM: 0\\
+% \textbf{HTUeuc}-NB: 0\\
+% TUman-CIELM: 0\\
+% TUman-C4.5w: 0\\
+% TUeuc-C4.5w: 0\\
+% \textbf{HTUmah}-CIELM: 0\\
+% EERent-NB: 0\\
+% TUman-NB: 0\\
+% \textbf{SGmulti}-5NN: 0\\
+% \textbf{HTUeuc}-C4.5w: 0\\
+% TUmah-5NN: 0\\
+demais ($\leq 1$): 26} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$\leq4$}}
 child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
 child {node [outcome] {
-\textbf{HTUman} C4.5w: 3\\
-TUmah C4.5w: 2\\
-TUman SVM: 2\\
-TUeuc RFw: 2\\
-\textbf{HTUman} NB: 2\\
-\textbf{HTUmah} SVM: 2\\
-TUman C4.5w: 2\\
-TUman CIELM: 2\\
-% TUman C4.5w: 2\\
-% TUman CIELM: 2\\
-% \textbf{HTUeuc} NB: 1\\
-% DWmah SVM: 1\\
-% TUman NB: 1\\
+\textbf{HTUman}-C4.5w: 3\\
+\textbf{HTUman}-NB: 2\\
+TUman-SVM: 2\\
+\textbf{HTUmah}-SVM: 2\\
+TUmah-C4.5w: 2\\
+TUman-CIELM: 2\\
+TUman-C4.5w: 2\\
+TUeuc-RFw: 2\\
 % \textbf{ATUman}: 1\\
-% \textbf{HTUmah} C4.5w: 1\\
-% EERent SVM: 1\\
-% EERacc SVM: 1\\
-% TUeuc CIELM: 1\\
-% TUeuc C4.5w: 1\\
-% TUmah 5NN: 1\\
-% TUman RFw: 1\\
-% EERent 5NN: 1\\
-% \textbf{HTUman} RFw: 1\\
-% \textbf{HTUman} SVM: 1\\
-% Mar RFw: 1\\
-% \textbf{HTUman} CIELM: 1\\
-% TUeuc NB: 1\\
-% TUeuc 5NN: 1\\
-% TUmah RFw: 1\\
-% Ent RFw: 1\\
-% \textbf{HTUmah} NB: 1\\
-% EERent RFw: 0\\
-% DWeuc RFw: 0\\
+% \textbf{HTUman}-SVM: 1\\
+% \textbf{HTUman}-CIELM: 1\\
+% TUeuc-NB: 1\\
+% EERent-5NN: 1\\
+% DWmah-SVM: 1\\
+% EERent-SVM: 1\\
+% \textbf{HTUmah}-C4.5w: 1\\
+% Mar-RFw: 1\\
+% TUeuc-CIELM: 1\\
+% EERacc-SVM: 1\\
+% \textbf{HTUeuc}-NB: 1\\
+% Ent-RFw: 1\\
+% \textbf{HTUman}-RFw: 1\\
+% TUeuc-C4.5w: 1\\
+% TUman-NB: 1\\
+% TUeuc-5NN: 1\\
+% TUmah-RFw: 1\\
+% TUman-RFw: 1\\
+% TUmah-5NN: 1\\
+% DWmah-CIELM: 0\\
+% DWmah-RFw: 0\\
+% DWman-RFw: 0\\
 % SVMsim: 0\\
-% \textbf{SGmulti} 5NN: 0\\
-% EERacc RFw: 0\\
-% TUman 5NN: 0\\
-% Ent SVM: 0\\
-% QBCRFw RFw: 0\\
-% DWman 5NN: 0\\
-% Mar CIELM: 0\\
-% TUmah SVM: 0\\
-% DWmah RFw: 0\\
-% \textbf{HTUeuc} RFw: 0\\
-% DWman CIELM: 0\\
-% \textbf{HTUmah} CIELM: 0\\
-% Ent NB: 0\\
-% Ent CIELM: 0\\
-% \textbf{SGmulti} RFw: 0\\
+% Ent-NB: 0\\
+% Mar-CIELM: 0\\
+% DWman-CIELM: 0\\
+% TUeuc-SVM: 0\\
+% EERacc-RFw: 0\\
+% TUmah-NB: 0\\
+% Ent-CIELM: 0\\
+% EERacc-NB: 0\\
+% QBCRFw-RFw: 0\\
+% DWeuc-SVM: 0\\
+% Mar-NB: 0\\
+% \textbf{SGmulti}-RFw: 0\\
+% \textbf{HTUmah}-5NN: 0\\
+% \textbf{HTUeuc}-SVM: 0\\
+% \textbf{HTUmah}-RFw: 0\\
+% TUmah-CIELM: 0\\
+% \textbf{HTUeuc}-5NN: 0\\
+% DWeuc-NB: 0\\
+% TUman-5NN: 0\\
 % SVMbal: 0\\
-% EERent NB: 0\\
-% EERent CIELM: 0\\
+% DWeuc-RFw: 0\\
+% \textbf{HTUman}-5NN: 0\\
+% DWeuc-CIELM: 0\\
+% Ent-5NN: 0\\
+% DWman-5NN: 0\\
 % Clu: 0\\
 % Rnd: 0\\
-% DWeuc CIELM: 0\\
-% Mar 5NN: 0\\
+% Mar-5NN: 0\\
 % \textbf{ATUmah}: 0\\
-% DWman SVM: 0\\
-% EERent C4.5w: 0\\
-% \textbf{HTUeuc} 5NN: 0\\
-% DWeuc NB: 0\\
-% DWman RFw: 0\\
-% TUeuc SVM: 0\\
-% \textbf{HTUmah} RFw: 0\\
-% \textbf{HTUeuc} C4.5w: 0\\
-% DWeuc 5NN: 0\\
-% TUmah NB: 0\\
-% \textbf{HTUman} 5NN: 0\\
-% \textbf{HTUeuc} SVM: 0\\
-% Mar NB: 0\\
-% \textbf{HTUmah} 5NN: 0\\
-% Ent 5NN: 0\\
-% DWmah CIELM: 0\\
-% EERacc NB: 0\\
-% TUmah CIELM: 0\\
-% DWeuc SVM: 0\\
+% TUmah-SVM: 0\\
+% DWeuc-5NN: 0\\
+% EERent-CIELM: 0\\
+% Ent-SVM: 0\\
+% EERent-RFw: 0\\
+% \textbf{HTUmah}-CIELM: 0\\
+% EERent-NB: 0\\
+% \textbf{SGmulti}-5NN: 0\\
+% DWman-SVM: 0\\
+% \textbf{HTUeuc}-RFw: 0\\
+% \textbf{HTUeuc}-C4.5w: 0\\
+% EERent-C4.5w: 0\\
 % \textbf{ATUeuc}: 0\\
 demais ($\leq 1$): 21} edge from parent node [cond] {$\leq50.3$}}
 child {node [decision] {\%major.}
 child {node [outcome] {
-\textbf{HTUeuc} RFw: 3\\
-TUman RFw: 2\\
-Mar RFw: 2\\
-\textbf{HTUman} 5NN: 2\\
-% EERent RFw: 1\\
-% EERacc RFw: 1\\
-% \textbf{HTUman} C4.5w: 1\\
+\textbf{HTUeuc}-RFw: 3\\
+Mar-RFw: 2\\
+\textbf{HTUman}-5NN: 2\\
+TUman-RFw: 2\\
 % \textbf{ATUman}: 1\\
-% TUeuc CIELM: 1\\
-% QBCRFw RFw: 1\\
-% TUeuc RFw: 1\\
-% \textbf{HTUman} RFw: 1\\
-% \textbf{HTUman} SVM: 1\\
-% \textbf{HTUmah} RFw: 1\\
-% \textbf{HTUman} CIELM: 1\\
-% \textbf{HTUeuc} SVM: 1\\
-% EERacc NB: 1\\
+% EERacc-NB: 1\\
+% QBCRFw-RFw: 1\\
+% \textbf{HTUman}-C4.5w: 1\\
+% \textbf{HTUman}-SVM: 1\\
+% \textbf{HTUman}-CIELM: 1\\
+% \textbf{HTUeuc}-SVM: 1\\
+% \textbf{HTUmah}-RFw: 1\\
+% TUeuc-CIELM: 1\\
+% EERent-RFw: 1\\
+% \textbf{HTUman}-RFw: 1\\
+% TUeuc-RFw: 1\\
 % \textbf{ATUeuc}: 1\\
-% DWeuc RFw: 0\\
+% DWmah-CIELM: 0\\
+% DWmah-RFw: 0\\
+% DWman-RFw: 0\\
+% \textbf{HTUmah}-NB: 0\\
 % SVMsim: 0\\
-% \textbf{HTUeuc} NB: 0\\
-% \textbf{SGmulti} 5NN: 0\\
-% TUman 5NN: 0\\
-% TUmah C4.5w: 0\\
-% DWmah SVM: 0\\
-% TUman NB: 0\\
-% \textbf{HTUmah} C4.5w: 0\\
-% EERent SVM: 0\\
-% EERacc SVM: 0\\
-% TUeuc C4.5w: 0\\
-% Ent SVM: 0\\
-% TUmah 5NN: 0\\
-% DWman 5NN: 0\\
-% Mar CIELM: 0\\
-% TUmah SVM: 0\\
-% DWmah RFw: 0\\
-% EERent 5NN: 0\\
-% DWman CIELM: 0\\
-% TUman SVM: 0\\
-% \textbf{HTUmah} CIELM: 0\\
-% Ent NB: 0\\
-% \textbf{HTUman} NB: 0\\
-% Ent CIELM: 0\\
-% \textbf{SGmulti} RFw: 0\\
+% Ent-NB: 0\\
+% Mar-CIELM: 0\\
+% DWman-CIELM: 0\\
+% TUeuc-SVM: 0\\
+% TUmah-NB: 0\\
+% Ent-CIELM: 0\\
+% DWeuc-SVM: 0\\
+% \textbf{HTUman}-NB: 0\\
+% TUman-SVM: 0\\
+% Mar-NB: 0\\
+% TUeuc-NB: 0\\
+% \textbf{SGmulti}-RFw: 0\\
+% \textbf{HTUmah}-5NN: 0\\
+% \textbf{HTUmah}-SVM: 0\\
+% EERent-5NN: 0\\
+% TUmah-CIELM: 0\\
+% \textbf{HTUeuc}-5NN: 0\\
+% DWmah-SVM: 0\\
+% DWeuc-NB: 0\\
+% TUman-5NN: 0\\
+% EERent-SVM: 0\\
 % SVMbal: 0\\
-% EERent NB: 0\\
-% \textbf{HTUmah} SVM: 0\\
-% EERent CIELM: 0\\
+% TUmah-C4.5w: 0\\
+% \textbf{HTUmah}-C4.5w: 0\\
+% DWeuc-RFw: 0\\
+% DWeuc-CIELM: 0\\
+% Ent-5NN: 0\\
+% DWman-5NN: 0\\
 % Clu: 0\\
 % Rnd: 0\\
-% DWeuc CIELM: 0\\
-% Mar 5NN: 0\\
+% Mar-5NN: 0\\
 % \textbf{ATUmah}: 0\\
-% DWman SVM: 0\\
-% EERent C4.5w: 0\\
-% \textbf{HTUeuc} 5NN: 0\\
-% DWeuc NB: 0\\
-% DWman RFw: 0\\
-% TUeuc SVM: 0\\
-% \textbf{HTUeuc} C4.5w: 0\\
-% DWeuc 5NN: 0\\
-% TUmah NB: 0\\
-% TUman C4.5w: 0\\
-% TUeuc NB: 0\\
-% TUeuc 5NN: 0\\
-% TUmah RFw: 0\\
-% Mar NB: 0\\
-% \textbf{HTUmah} 5NN: 0\\
-% Ent 5NN: 0\\
-% DWmah CIELM: 0\\
-% TUman CIELM: 0\\
-% TUmah CIELM: 0\\
-% Ent RFw: 0\\
-% DWeuc SVM: 0\\
-% \textbf{HTUmah} NB: 0\\
+% TUmah-SVM: 0\\
+% DWeuc-5NN: 0\\
+% EERent-CIELM: 0\\
+% EERacc-SVM: 0\\
+% \textbf{HTUeuc}-NB: 0\\
+% Ent-SVM: 0\\
+% TUman-CIELM: 0\\
+% Ent-RFw: 0\\
+% TUman-C4.5w: 0\\
+% TUeuc-C4.5w: 0\\
+% \textbf{HTUmah}-CIELM: 0\\
+% EERent-NB: 0\\
+% TUman-NB: 0\\
+% \textbf{SGmulti}-5NN: 0\\
+% TUeuc-5NN: 0\\
+% DWman-SVM: 0\\
+% \textbf{HTUeuc}-C4.5w: 0\\
+% TUmah-RFw: 0\\
+% EERent-C4.5w: 0\\
+% TUmah-5NN: 0\\
 demais ($\leq 1$): 14} edge from parent node [cond] {$\leq42.2$}}
 child {node [outcome] {
 SVMbal: 3\\
+Mar-CIELM: 2\\
 \textbf{ATUman}: 2\\
-Mar CIELM: 2\\
-\textbf{HTUman} CIELM: 2\\
-% \textbf{HTUman} CIELM: 2\\
-% EERent RFw: 1\\
-% EERacc RFw: 1\\
-% \textbf{HTUman} C4.5w: 1\\
-% TUeuc RFw: 1\\
-% \textbf{SGmulti} RFw: 1\\
-% EERent NB: 1\\
-% EERent CIELM: 1\\
-% Mar RFw: 1\\
-% TUman C4.5w: 1\\
-% TUmah RFw: 1\\
-% \textbf{HTUmah} NB: 1\\
-% DWeuc RFw: 0\\
+\textbf{HTUman}-CIELM: 2\\
+% EERacc-RFw: 1\\
+% \textbf{HTUman}-C4.5w: 1\\
+% \textbf{SGmulti}-RFw: 1\\
+% Mar-RFw: 1\\
+% EERent-CIELM: 1\\
+% EERent-RFw: 1\\
+% TUman-C4.5w: 1\\
+% EERent-NB: 1\\
+% TUeuc-RFw: 1\\
+% TUmah-RFw: 1\\
+% DWmah-CIELM: 0\\
+% DWmah-RFw: 0\\
+% DWman-RFw: 0\\
 % SVMsim: 0\\
-% \textbf{HTUeuc} NB: 0\\
-% \textbf{SGmulti} 5NN: 0\\
-% TUman 5NN: 0\\
-% TUmah C4.5w: 0\\
-% DWmah SVM: 0\\
-% TUman NB: 0\\
-% \textbf{HTUmah} C4.5w: 0\\
-% EERent SVM: 0\\
-% EERacc SVM: 0\\
-% TUeuc CIELM: 0\\
-% TUeuc C4.5w: 0\\
-% Ent SVM: 0\\
-% TUmah 5NN: 0\\
-% QBCRFw RFw: 0\\
-% DWman 5NN: 0\\
-% TUmah SVM: 0\\
-% TUman RFw: 0\\
-% DWmah RFw: 0\\
-% EERent 5NN: 0\\
-% \textbf{HTUeuc} RFw: 0\\
-% DWman CIELM: 0\\
-% TUman SVM: 0\\
-% \textbf{HTUmah} CIELM: 0\\
-% Ent NB: 0\\
-% \textbf{HTUman} NB: 0\\
-% \textbf{HTUman} RFw: 0\\
-% Ent CIELM: 0\\
-% \textbf{HTUmah} SVM: 0\\
-% \textbf{HTUman} SVM: 0\\
+% Ent-NB: 0\\
+% DWman-CIELM: 0\\
+% TUeuc-SVM: 0\\
+% TUmah-NB: 0\\
+% Ent-CIELM: 0\\
+% EERacc-NB: 0\\
+% QBCRFw-RFw: 0\\
+% \textbf{HTUman}-SVM: 0\\
+% DWeuc-SVM: 0\\
+% \textbf{HTUman}-NB: 0\\
+% TUman-SVM: 0\\
+% Mar-NB: 0\\
+% TUeuc-NB: 0\\
+% \textbf{HTUmah}-5NN: 0\\
+% \textbf{HTUeuc}-SVM: 0\\
+% \textbf{HTUmah}-SVM: 0\\
+% \textbf{HTUmah}-RFw: 0\\
+% EERent-5NN: 0\\
+% TUmah-CIELM: 0\\
+% \textbf{HTUeuc}-5NN: 0\\
+% DWmah-SVM: 0\\
+% DWeuc-NB: 0\\
+% TUman-5NN: 0\\
+% EERent-SVM: 0\\
+% TUmah-C4.5w: 0\\
+% \textbf{HTUmah}-C4.5w: 0\\
+% DWeuc-RFw: 0\\
+% \textbf{HTUman}-5NN: 0\\
+% DWeuc-CIELM: 0\\
+% Ent-5NN: 0\\
+% DWman-5NN: 0\\
 % Clu: 0\\
 % Rnd: 0\\
-% DWeuc CIELM: 0\\
-% Mar 5NN: 0\\
+% Mar-5NN: 0\\
+% TUeuc-CIELM: 0\\
 % \textbf{ATUmah}: 0\\
-% DWman SVM: 0\\
-% EERent C4.5w: 0\\
-% \textbf{HTUeuc} 5NN: 0\\
-% DWeuc NB: 0\\
-% DWman RFw: 0\\
-% TUeuc SVM: 0\\
-% \textbf{HTUmah} RFw: 0\\
-% \textbf{HTUeuc} C4.5w: 0\\
-% DWeuc 5NN: 0\\
-% TUmah NB: 0\\
-% \textbf{HTUman} 5NN: 0\\
-% \textbf{HTUeuc} SVM: 0\\
-% TUeuc NB: 0\\
-% TUeuc 5NN: 0\\
-% Mar NB: 0\\
-% \textbf{HTUmah} 5NN: 0\\
-% Ent 5NN: 0\\
-% DWmah CIELM: 0\\
-% EERacc NB: 0\\
-% TUman CIELM: 0\\
-% TUmah CIELM: 0\\
-% Ent RFw: 0\\
-% DWeuc SVM: 0\\
+% TUmah-SVM: 0\\
+% DWeuc-5NN: 0\\
+% EERacc-SVM: 0\\
+% \textbf{HTUeuc}-NB: 0\\
+% Ent-SVM: 0\\
+% TUman-CIELM: 0\\
+% Ent-RFw: 0\\
+% \textbf{HTUman}-RFw: 0\\
+% TUeuc-C4.5w: 0\\
+% \textbf{HTUmah}-CIELM: 0\\
+% TUman-NB: 0\\
+% \textbf{SGmulti}-5NN: 0\\
+% TUeuc-5NN: 0\\
+% DWman-SVM: 0\\
+% \textbf{HTUeuc}-RFw: 0\\
+% \textbf{HTUeuc}-C4.5w: 0\\
+% EERent-C4.5w: 0\\
+% TUman-RFw: 0\\
 % \textbf{ATUeuc}: 0\\
+% TUmah-5NN: 0\\
 demais ($\leq 1$): 11} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$>50.3$}}edge from parent node [cond] {$>4$}}edge from parent node [cond] {$\leq0$}}
 child {node [decision] {\%nominais}
 child {node [outcome] {
-TUeuc 5NN: 3\\
-TUman 5NN: 2\\
-EERent 5NN: 2\\
-\textbf{HTUeuc} RFw: 2\\
-\textbf{SGmulti} RFw: 2\\
-TUmah NB: 2\\
-TUmah RFw: 2\\
-% \textbf{SGmulti} RFw: 2\\
-% TUmah NB: 2\\
-% TUmah RFw: 2\\
-% EERent RFw: 1\\
-% EERacc SVM: 1\\
-% TUmah 5NN: 1\\
-% DWeuc CIELM: 1\\
-% \textbf{HTUmah} RFw: 1\\
-% Ent 5NN: 1\\
-% DWmah CIELM: 1\\
-% TUmah CIELM: 1\\
-% DWeuc SVM: 1\\
-% DWeuc RFw: 0\\
+TUeuc-5NN: 3\\
+TUmah-NB: 2\\
+\textbf{SGmulti}-RFw: 2\\
+EERent-5NN: 2\\
+TUman-5NN: 2\\
+\textbf{HTUeuc}-RFw: 2\\
+TUmah-RFw: 2\\
+% DWeuc-SVM: 1\\
+% \textbf{HTUmah}-RFw: 1\\
+% TUmah-CIELM: 1\\
+% DWeuc-CIELM: 1\\
+% Ent-5NN: 1\\
+% EERacc-SVM: 1\\
+% EERent-RFw: 1\\
+% TUmah-5NN: 1\\
+% DWmah-RFw: 0\\
+% DWman-RFw: 0\\
+% \textbf{HTUmah}-NB: 0\\
 % SVMsim: 0\\
-% \textbf{HTUeuc} NB: 0\\
-% \textbf{SGmulti} 5NN: 0\\
-% EERacc RFw: 0\\
-% \textbf{HTUman} C4.5w: 0\\
-% TUmah C4.5w: 0\\
-% DWmah SVM: 0\\
-% TUman NB: 0\\
+% Ent-NB: 0\\
+% Mar-CIELM: 0\\
+% DWman-CIELM: 0\\
+% TUeuc-SVM: 0\\
+% EERacc-RFw: 0\\
+% Ent-CIELM: 0\\
 % \textbf{ATUman}: 0\\
-% \textbf{HTUmah} C4.5w: 0\\
-% EERent SVM: 0\\
-% TUeuc CIELM: 0\\
-% TUeuc C4.5w: 0\\
-% Ent SVM: 0\\
-% QBCRFw RFw: 0\\
-% DWman 5NN: 0\\
-% Mar CIELM: 0\\
-% TUmah SVM: 0\\
-% TUman RFw: 0\\
-% DWmah RFw: 0\\
-% DWman CIELM: 0\\
-% TUman SVM: 0\\
-% \textbf{HTUmah} CIELM: 0\\
-% TUeuc RFw: 0\\
-% Ent NB: 0\\
-% \textbf{HTUman} NB: 0\\
-% \textbf{HTUman} RFw: 0\\
-% Ent CIELM: 0\\
+% EERacc-NB: 0\\
+% QBCRFw-RFw: 0\\
+% \textbf{HTUman}-C4.5w: 0\\
+% \textbf{HTUman}-SVM: 0\\
+% \textbf{HTUman}-CIELM: 0\\
+% \textbf{HTUman}-NB: 0\\
+% TUman-SVM: 0\\
+% Mar-NB: 0\\
+% TUeuc-NB: 0\\
+% \textbf{HTUmah}-5NN: 0\\
+% \textbf{HTUeuc}-SVM: 0\\
+% \textbf{HTUmah}-SVM: 0\\
+% \textbf{HTUeuc}-5NN: 0\\
+% DWmah-SVM: 0\\
+% DWeuc-NB: 0\\
+% EERent-SVM: 0\\
 % SVMbal: 0\\
-% EERent NB: 0\\
-% \textbf{HTUmah} SVM: 0\\
-% EERent CIELM: 0\\
-% \textbf{HTUman} SVM: 0\\
+% TUmah-C4.5w: 0\\
+% \textbf{HTUmah}-C4.5w: 0\\
+% DWeuc-RFw: 0\\
+% Mar-RFw: 0\\
+% \textbf{HTUman}-5NN: 0\\
+% DWman-5NN: 0\\
 % Clu: 0\\
 % Rnd: 0\\
-% Mar RFw: 0\\
-% Mar 5NN: 0\\
+% Mar-5NN: 0\\
+% TUeuc-CIELM: 0\\
 % \textbf{ATUmah}: 0\\
-% DWman SVM: 0\\
-% EERent C4.5w: 0\\
-% \textbf{HTUeuc} 5NN: 0\\
-% DWeuc NB: 0\\
-% DWman RFw: 0\\
-% TUeuc SVM: 0\\
-% \textbf{HTUeuc} C4.5w: 0\\
-% \textbf{HTUman} CIELM: 0\\
-% DWeuc 5NN: 0\\
-% \textbf{HTUman} 5NN: 0\\
-% TUman C4.5w: 0\\
-% \textbf{HTUeuc} SVM: 0\\
-% TUeuc NB: 0\\
-% Mar NB: 0\\
-% \textbf{HTUmah} 5NN: 0\\
-% EERacc NB: 0\\
-% TUman CIELM: 0\\
-% Ent RFw: 0\\
+% TUmah-SVM: 0\\
+% DWeuc-5NN: 0\\
+% EERent-CIELM: 0\\
+% \textbf{HTUeuc}-NB: 0\\
+% Ent-SVM: 0\\
+% TUman-CIELM: 0\\
+% Ent-RFw: 0\\
+% TUman-C4.5w: 0\\
+% \textbf{HTUman}-RFw: 0\\
+% TUeuc-C4.5w: 0\\
+% \textbf{HTUmah}-CIELM: 0\\
+% EERent-NB: 0\\
+% TUman-NB: 0\\
+% \textbf{SGmulti}-5NN: 0\\
+% DWman-SVM: 0\\
+% \textbf{HTUeuc}-C4.5w: 0\\
+% TUeuc-RFw: 0\\
+% EERent-C4.5w: 0\\
+% TUman-RFw: 0\\
 % \textbf{ATUeuc}: 0\\
-% \textbf{HTUmah} NB: 0\\
 demais ($\leq 1$): 9} edge from parent node [cond] {$\leq42.9$}}
 child {node [outcome] {
-Mar RFw: 7\\
-Ent RFw: 4\\
-% \textbf{HTUmah} RFw: 2\\
-% \textbf{HTUeuc} SVM: 2\\
+Mar-RFw: 7\\
+Ent-RFw: 4\\
+QBCRFw-RFw: 2\\
+\textbf{HTUeuc}-SVM: 2\\
+\textbf{HTUmah}-RFw: 2\\
 % SVMsim: 1\\
-% TUman 5NN: 1\\
-% DWmah SVM: 1\\
-% EERent SVM: 1\\
-% TUeuc C4.5w: 1\\
-% DWmah RFw: 1\\
-% \textbf{HTUeuc} RFw: 1\\
-% \textbf{HTUmah} CIELM: 1\\
-% Ent NB: 1\\
-% \textbf{SGmulti} RFw: 1\\
+% Ent-NB: 1\\
+% Mar-NB: 1\\
+% TUeuc-NB: 1\\
+% \textbf{SGmulti}-RFw: 1\\
+% \textbf{HTUmah}-5NN: 1\\
+% TUmah-CIELM: 1\\
+% DWmah-SVM: 1\\
+% DWeuc-NB: 1\\
+% TUman-5NN: 1\\
+% EERent-SVM: 1\\
 % \textbf{ATUmah}: 1\\
-% DWman SVM: 1\\
-% DWeuc NB: 1\\
-% \textbf{HTUeuc} C4.5w: 1\\
-% TUeuc NB: 1\\
-% Mar NB: 1\\
-% \textbf{HTUmah} 5NN: 1\\
-% TUmah CIELM: 1\\
-% EERent RFw: 0\\
-% DWeuc RFw: 0\\
-% \textbf{HTUeuc} NB: 0\\
-% \textbf{SGmulti} 5NN: 0\\
-% EERacc RFw: 0\\
-% \textbf{HTUman} C4.5w: 0\\
-% TUmah C4.5w: 0\\
-% TUman NB: 0\\
+% TUeuc-C4.5w: 1\\
+% \textbf{HTUmah}-CIELM: 1\\
+% DWman-SVM: 1\\
+% \textbf{HTUeuc}-RFw: 1\\
+% \textbf{HTUeuc}-C4.5w: 1\\
+% DWmah-CIELM: 0\\
+% DWman-RFw: 0\\
+% \textbf{HTUmah}-NB: 0\\
+% Mar-CIELM: 0\\
+% DWman-CIELM: 0\\
+% TUeuc-SVM: 0\\
+% EERacc-RFw: 0\\
+% TUmah-NB: 0\\
+% Ent-CIELM: 0\\
 % \textbf{ATUman}: 0\\
-% \textbf{HTUmah} C4.5w: 0\\
-% EERacc SVM: 0\\
-% TUeuc CIELM: 0\\
-% Ent SVM: 0\\
-% TUmah 5NN: 0\\
-% DWman 5NN: 0\\
-% Mar CIELM: 0\\
-% TUmah SVM: 0\\
-% TUman RFw: 0\\
-% EERent 5NN: 0\\
-% DWman CIELM: 0\\
-% TUman SVM: 0\\
-% TUeuc RFw: 0\\
-% \textbf{HTUman} NB: 0\\
-% \textbf{HTUman} RFw: 0\\
-% Ent CIELM: 0\\
+% EERacc-NB: 0\\
+% \textbf{HTUman}-C4.5w: 0\\
+% \textbf{HTUman}-SVM: 0\\
+% \textbf{HTUman}-CIELM: 0\\
+% DWeuc-SVM: 0\\
+% \textbf{HTUman}-NB: 0\\
+% TUman-SVM: 0\\
+% \textbf{HTUmah}-SVM: 0\\
+% EERent-5NN: 0\\
+% \textbf{HTUeuc}-5NN: 0\\
 % SVMbal: 0\\
-% EERent NB: 0\\
-% \textbf{HTUmah} SVM: 0\\
-% EERent CIELM: 0\\
-% \textbf{HTUman} SVM: 0\\
+% TUmah-C4.5w: 0\\
+% \textbf{HTUmah}-C4.5w: 0\\
+% DWeuc-RFw: 0\\
+% \textbf{HTUman}-5NN: 0\\
+% DWeuc-CIELM: 0\\
+% Ent-5NN: 0\\
+% DWman-5NN: 0\\
 % Clu: 0\\
 % Rnd: 0\\
-% DWeuc CIELM: 0\\
-% Mar 5NN: 0\\
-% EERent C4.5w: 0\\
-% \textbf{HTUeuc} 5NN: 0\\
-% DWman RFw: 0\\
-% TUeuc SVM: 0\\
-% \textbf{HTUman} CIELM: 0\\
-% DWeuc 5NN: 0\\
-% TUmah NB: 0\\
-% \textbf{HTUman} 5NN: 0\\
-% TUman C4.5w: 0\\
-% TUeuc 5NN: 0\\
-% TUmah RFw: 0\\
-% Ent 5NN: 0\\
-% DWmah CIELM: 0\\
-% EERacc NB: 0\\
-% TUman CIELM: 0\\
-% DWeuc SVM: 0\\
+% Mar-5NN: 0\\
+% TUeuc-CIELM: 0\\
+% TUmah-SVM: 0\\
+% DWeuc-5NN: 0\\
+% EERent-CIELM: 0\\
+% EERacc-SVM: 0\\
+% \textbf{HTUeuc}-NB: 0\\
+% Ent-SVM: 0\\
+% TUman-CIELM: 0\\
+% EERent-RFw: 0\\
+% TUman-C4.5w: 0\\
+% \textbf{HTUman}-RFw: 0\\
+% EERent-NB: 0\\
+% TUman-NB: 0\\
+% \textbf{SGmulti}-5NN: 0\\
+% TUeuc-5NN: 0\\
+% TUeuc-RFw: 0\\
+% TUmah-RFw: 0\\
+% EERent-C4.5w: 0\\
+% TUman-RFw: 0\\
 % \textbf{ATUeuc}: 0\\
-% \textbf{HTUmah} NB: 0\\
-demais ($\leq 2$): 24} edge from parent node [cond] {$>42.9$}}edge from parent node [cond] {$>0$}}
+% TUmah-5NN: 0\\
+demais ($\leq 1$): 18} edge from parent node [cond] {$>42.9$}}edge from parent node [cond] {$>0$}}
 ;
