--- a/tese.tex
+++ b/tese.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,twoside]{book}
+% \tracingmacros2
 \usepackage{etex}
 \usepackage{afterpage}
 \usepackage[utf8]{inputenc}
@@ -12,7 +13,7 @@
 \usepackage{wasysym}
 % \usepackage{mathtools}
 
-% \usepackage{bm}
+\usepackage{bm}
 % \usepackage{stmaryrd}
 % \usepackage[tight,footnotesize]{subfigure}
 
@@ -155,7 +156,6 @@
 \newcommand{\RAKEL}{{\emph {RAKEL}}\/\xspace}
 \newcommand{\win}{{+}\/\xspace}
 \newcommand{\lose}{{-}\/\xspace}
-\usepackage{amsmath}
 
 % \usepackage[usenames,dvipsnames]{xcolor}
 \definecolor{cinzaclaro}{rgb}{0.84,0.84,0.84}
@@ -176,9 +176,9 @@
 
 \usepackage{pdflscape}
 \usepackage{capt-of}
-
-
 \begin{document}
+My pgf version is: \pgfversion
+% 
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \pagestyle{empty}
 \pagenumbering{roman}
@@ -227,12 +227,14 @@
 
 %Capitulos
 \input introducao
-\input contexto
-\input propostas
-\input metodologia
-\input experimentos %small; big
-\input exp-meta
-\input conclusao
+% \input contexto
+% \input propostas
+% \input metodologia
+% \input experimentos
+\usetikzlibrary{trees}
+\input exp-analise
+% \input exp-meta
+% \input conclusao
 \appendix
 \input apendice1
 \input apendice2
