--- a/experimentos.tex
+++ b/experimentos.tex
@@ -247,7 +247,8 @@ Elas são apresentadas na Tabela \ref{stratDists}.
 \textit{Detalhes na Tabela \ref{passiveDists}.}}
 \begin{center}\scalebox{0.77}{
 \begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|cc}
-                                & \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUeuc}\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{HTUeuc}\end{sideways} & \begin{sideways}\textbf{HTUman}\end{sideways} & \begin{sideways}\textbf{HTUmah}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}QBCRFw\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}DWman\end{sideways} & \begin{sideways}DWmah\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacc\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}SVMbal\end{sideways} & \begin{sideways}SVMsim\end{sideways} \\Rnd   & - & \textcolor{blue}{\textbf{  0.64}} & \textbf{  0.58} & \textbf{  0.57} & \textbf{  0.55} &   0.44 &   0.46 &   0.46 & \textbf{  0.57} &   0.37 &   0.37 &   0.37 &   0.25 & \textcolor{red}{\textbf{  0.24}} &   0.26 &   0.40 &   0.40 &   0.41 &   0.46 &   0.38 &   0.33 &   0.30 \\
+                                & \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUeuc}\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{HTUeuc}\end{sideways} & \begin{sideways}\textbf{HTUman}\end{sideways} & \begin{sideways}\textbf{HTUmah}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}QBCRFw\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}DWman\end{sideways} & \begin{sideways}DWmah\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacc\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}SVMbal\end{sideways} & \begin{sideways}SVMsim\end{sideways} \\Rnd   & - & \textcolor{blue}{\textbf{  0.64}} & \textbf{  0.58} & \textbf{  0.57} & \
+textbf{  0.55} &   0.44 &   0.46 &   0.46 & \textbf{  0.57} &   0.37 &   0.37 &   0.37 &   0.25 & \textcolor{red}{\textbf{  0.24}} &   0.26 &   0.40 &   0.40 &   0.41 &   0.46 &   0.38 &   0.33 &   0.30 \\
 Clu     & \textcolor{blue}{\textbf{  0.64}} & - & \textbf{  0.57} & \textbf{  0.58} & \textbf{  0.55} &   0.48 & \textbf{  0.50} & \textbf{  0.50} & \textbf{  0.59} &   0.40 &   0.39 &   0.40 &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.25 &   0.43 &   0.43 &   0.44 & \textbf{  0.51} &   0.41 &   0.34 &   0.30 \\ \hline
 \textbf{ATUeuc} & \textbf{  0.58} & \textbf{  0.57} & - & \textcolor{blue}{\textbf{  0.76}} & \textbf{  0.70} &   0.49 & \textbf{  0.51} & \textbf{  0.52} & \textbf{  0.50} &   0.36 &   0.36 &   0.36 &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.25 &   0.43 &   0.43 &   0.44 &   0.42 &   0.36 &   0.33 &   0.29 \\
 \textbf{ATUman} & \textbf{  0.57} & \textbf{  0.58} & \textcolor{blue}{\textbf{  0.76}} & - & \textbf{  0.70} & \textbf{  0.51} & \textbf{  0.54} & \textbf{  0.53} & \textbf{  0.50} &   0.37 &   0.37 &   0.37 &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.25 &   0.44 &   0.45 &   0.45 &   0.44 &   0.37 &   0.34 &   0.30 \\ \hline
