--- a/imagens/macros-pgf.tex
+++ b/imagens/macros-pgf.tex
@@ -1,4 +1,7 @@
 \usepackage{pgfplots}
+\usetikzlibrary{external}
+\tikzexternalize
+\pgfplotsset{compat=1.11}
 \usetikzlibrary{plotmarks}
 \usetikzlibrary{scopes,shapes,shadows,calc,arrows,shapes.symbols,automata,decorations.pathmorphing,backgrounds,fit,positioning}
 
@@ -190,3 +193,4 @@
 	\end{tikzpicture}
 	};
 }
+
