--- a/treeALCKappaperd.tex
+++ b/treeALCKappaperd.tex
@@ -3,9 +3,8 @@ child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
 child {node [outcome] {
 DWman: 21\\
 DWeuc: 15\\
-SVMsim: 8\\
-DWmah: 6\\
-SVMbal: 3\\
+% DWmah: 6\\
+% SVMbal: 3\\
 % TUman: 2\\
 % \textbf{HTUmah}: 2\\
 % \textbf{ATUeuc}: 2\\
@@ -23,10 +22,9 @@ SVMbal: 3\\
 % \textbf{ATUmah}: 0\\
 % TUeuc: 0\\
 % \textbf{SGmulti}: 0\\
-demais: 12} edge from parent node [cond] {$\leq75.5$}}
+demais ($\leq 8$): 29} edge from parent node [cond] {$\leq75.5$}}
 child {node [outcome] {
 DWmah: 18\\
-DWman: 14\\
 % DWeuc: 11\\
 % SVMsim: 2\\
 % \textbf{HTUeuc}: 0\\
@@ -47,7 +45,7 @@ DWman: 14\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 13} edge from parent node [cond] {$>75.5$}}edge from parent node [cond] {rígida}}
+demais ($\leq 14$): 27} edge from parent node [cond] {$>75.5$}}edge from parent node [cond] {rígida}}
 child {node [decision] {algoritmo}
 child {node [decision] {\#atributos}
 child {node [outcome] {
@@ -55,7 +53,6 @@ DWmah: 10\\
 EERacc: 9\\
 SVMsim: 8\\
 SVMbal: 7\\
-QBCRFw: 5\\
 % DWman: 5\\
 % Clu: 2\\
 % DWeuc: 2\\
@@ -73,7 +70,7 @@ QBCRFw: 5\\
 % TUeuc: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 13} edge from parent node [cond] {$\leq19$}}
+demais ($\leq 5$): 18} edge from parent node [cond] {$\leq19$}}
 child {node [outcome] {
 SVMsim: 9\\
 DWman: 8\\
@@ -97,14 +94,13 @@ DWmah: 5\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 14} edge from parent node [cond] {$>19$}}edge from parent node [cond] {5NN}}
+demais ($\leq 4$): 14} edge from parent node [cond] {$>19$}}edge from parent node [cond] {5NN}}
 %
 child {node [decision] {\#atributos}
 child {node [outcome] {
 EERent: 24\\
 DWeuc: 7\\
-DWman: 6\\
-Rnd: 4\\
+% Rnd: 4\\
 % SVMsim: 2\\
 % QBCRFw: 2\\
 % DWmah: 2\\
@@ -123,13 +119,12 @@ Rnd: 4\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 9} edge from parent node [cond] {$\leq18$}}
+demais ($\leq 6$): 19} edge from parent node [cond] {$\leq18$}}
 child {node [outcome] {
 DWeuc: 9\\
 QBCRFw: 8\\
 DWman: 8\\
 DWmah: 5\\
-SVMsim: 4\\
 % SVMbal: 3\\
 % EERent: 3\\
 % EERacc: 1\\
@@ -147,12 +142,11 @@ SVMsim: 4\\
 % \textbf{ATUmah}: 0\\
 % \textbf{HTUmah}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 12} edge from parent node [cond] {$>18$}}edge from parent node [cond] {CIELM}}
+demais ($\leq 4$): 16} edge from parent node [cond] {$>18$}}edge from parent node [cond] {CIELM}}
 child {node [outcome] {
 SVMsim: 21\\
 QBCRFw: 18\\
 DWman: 17\\
-DWeuc: 11\\
 % Rnd: 5\\
 % DWmah: 4\\
 % SVMbal: 4\\
@@ -171,12 +165,11 @@ DWeuc: 11\\
 % TUeuc: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 27} edge from parent node [cond] {NB}}
+demais ($\leq 11$): 38} edge from parent node [cond] {NB}}
 child {node [decision] {\%major.}
 child {node [outcome] {
 DWman: 15\\
 SVMsim: 12\\
-DWeuc: 10\\
 % SVMbal: 4\\
 % DWmah: 2\\
 % \textbf{ATUmah}: 2\\
@@ -196,7 +189,7 @@ DWeuc: 10\\
 % Mar: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
-demais: 12} edge from parent node [cond] {$\leq55.5$}}
+demais ($\leq 10$): 22} edge from parent node [cond] {$\leq55.5$}}
 child {node [outcome] {
 SVMsim: 7\\
 Rnd: 7\\
@@ -220,7 +213,7 @@ DWman: 4\\
 % Clu: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
-demais: 13} edge from parent node [cond] {$>55.5$}}edge from parent node [cond] {RFw}}
+demais ($\leq 3$): 13} edge from parent node [cond] {$>55.5$}}edge from parent node [cond] {RFw}}
 child {node [decision] {\%minor.}
 child {node [outcome] {
 DWman: 10\\
@@ -230,6 +223,8 @@ Ent: 3\\
 QBCRFw: 3\\
 DWmah: 3\\
 Clu: 3\\
+Rnd: 3\\
+\textbf{SGmulti}: 3\\
 % Rnd: 3\\
 % \textbf{SGmulti}: 3\\
 % EERacc: 2\\
@@ -245,7 +240,7 @@ Clu: 3\\
 % TUmah: 0\\
 % \textbf{ATUmah}: 0\\
 % Mar: 0\\
-demais: 14} edge from parent node [cond] {$\leq25.9$}}
+demais ($\leq 2$): 8} edge from parent node [cond] {$\leq25.9$}}
 child {node [outcome] {
 Ent: 7\\
 DWman: 5\\
@@ -269,5 +264,6 @@ DWeuc: 3\\
 % EERent: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
-demais: 12} edge from parent node [cond] {$>25.9$}}edge from parent node [cond] {SVM}}edge from parent node [cond] {flex{\'i}vel}}
+demais ($\leq 2$): 12} edge from parent node [cond] {$>25.9$}}edge from parent node [cond] {SVM}}edge from parent node [cond] {flexível}}
+%
 ;
