primeira versao para André

--- a/arvorePares.tex
+++ b/arvorePares.tex
@@ -32,3 +32,128 @@ level 5/.style={level distance=3cm,sibling angle=45},
 \end{center}
 \end{figure}
 % \end{landscape}\clearpage}
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{table}[h]
+\caption{\ano{só é possível calcular friedman até 28 ou 30 pares!!} 
+Contagem 3 primeiros/últimos
+75 tests.
+--------Kappa---------------
+271 total de vencedores
+229 total de perdedores
+% Medida: kappa médio. \textit{Legenda na Tabela \ref{tab:friedClassif}.}
+}
+\begin{center}
+\scalebox{0.5}{
+\begin{tabular}{lccc}
+algoritmo & \makecell{primeiros\\lugares} & \makecell{derrotas\\para Rnd}  & \makecell{últimos\\lugares} \\
+\hline
+               
+Mar-RFw    & 14 & 17 & 1 \\
+HTUmah-RFw & 12 & 16 & 0 \\
+HTUeuc-RFw & 11 & 12 & 1 \\
+TUeuc-RFw  & 10 & 16 & 0 \\
+TUman-RFw  & 9 & 17 & 0 \\
+Ent-RFw    & 9 & 29 & 1 \\
+EERent-RFw & 8 & 15 & 0 \\
+TUmah-RFw  & 8 & 14 & 0 \\
+HTUman-RFw & 7 & 17 & 0 \\
+EERent-SVM & 7 & 16 & 0 \\
+DWman-RFw  & 6 & 39 & 1 \\
+SGmulti-RFw & 6 & 19 & 0 \\
+TUmah-CIELM & 6 & 19 & 0 \\
+HTUman-CIELM & 6 & 22 & 0 \\
+HTUman-C4.5w & 6 & 16 & 0 \\
+HTUeuc-SVM & 6 & 16 & 0 \\
+DWmah-RFw  & 5 & 42 & 3 \\
+DWeuc-RFw  & 5 & 42 & 2 \\
+EERent-5NN & 5 & 31 & 0 \\
+TUeuc-5NN  & 5 & 27 & 1 \\
+TUman-SVM  & 5 & 25 & 0 \\
+DWmah-SVM  & 5 & 45 & 5 \\
+ATUman     & 5 & 25 & 0 \\
+HTUman-NB  & 4 & 21 & 0 \\
+TUman-5NN  & 4 & 25 & 1 \\
+SVMbal     & 4 & 46 & 3 \\
+QBCRFw-RFw & 4 & 24 & 0 \\
+HTUman-SVM & 4 & 24 & 1 \\
+EERacc-RFw & 3 & 20 & 0 \\
+TUeuc-NB   & 3 & 28 & 0 \\
+HTUmah-NB  & 3 & 18 & 0 \\
+Mar-CIELM  & 3 & 23 & 1 \\
+TUman-C4.5w & 3 & 25 & 0 \\
+Ent-5NN    & 3 & 38 & 3 \\
+HTUmah-5NN & 3 & 22 & 1 \\
+HTUman-5NN & 3 & 22 & 0 \\
+EERacc-SVM & 3 & 24 & 0 \\
+DWman-SVM  & 3 & 42 & 6 \\
+DWeuc-SVM  & 3 & 46 & 2 \\
+TUmah-NB   & 2 & 27 & 0 \\
+DWeuc-NB   & 2 & 55 & 5 \\
+TUman-CIELM & 2 & 16 & 1 \\
+TUeuc-CIELM & 2 & 15 & 0 \\
+DWmah-CIELM & 2 & 60 & 15 \\
+DWeuc-CIELM & 2 & 56 & 16 \\
+TUmah-C4.5w & 2 & 28 & 1 \\
+TUeuc-C4.5w & 2 & 24 & 2 \\
+HTUmah-C4.5w & 2 & 24 & 1 \\
+TUmah-5NN  & 2 & 29 & 2 \\
+DWman-5NN  & 2 & 51 & 7 \\
+Mar-5NN    & 2 & 38 & 4 \\
+HTUeuc-5NN & 2 & 21 & 1 \\
+SVMsim     & 2 & 46 & 6 \\
+HTUmah-SVM & 2 & 23 & 0 \\
+ATUeuc     & 2 & 23 & 1 \\
+EERent-NB  & 1 & 32 & 1 \\
+EERacc-NB  & 1 & 40 & 3 \\
+TUman-NB   & 1 & 28 & 0 \\
+Mar-NB     & 1 & 42 & 0 \\
+Ent-NB     & 1 & 37 & 1 \\
+HTUeuc-NB  & 1 & 22 & 0 \\
+EERent-CIELM & 1 & 48 & 6 \\
+DWman-CIELM & 1 & 58 & 15 \\
+Ent-CIELM  & 1 & 38 & 1 \\
+HTUmah-CIELM & 1 & 25 & 2 \\
+EERent-C4.5w & 1 & 28 & 0 \\
+HTUeuc-C4.5w & 1 & 27 & 0 \\
+DWeuc-5NN  & 1 & 43 & 5 \\
+SGmulti-5NN & 1 & 56 & 1 \\
+TUmah-SVM  & 1 & 28 & 0 \\
+TUeuc-SVM  & 1 & 25 & 0 \\
+Ent-SVM    & 1 & 45 & 6 \\
+ATUmah     & 1 & 25 & 2 \\
+Clu        & 1 & 24 & 1 \\
+Rnd        & 1 & 75 & 1 \\
+DWmah-NB   & 0 & 57 & 6 \\
+DWman-NB   & 0 & 55 & 9 \\
+SGmulti-NB & 0 & 31 & 1 \\
+EERacc-CIELM & 0 & 43 & 2 \\
+SGmulti-CIELM & 0 & 28 & 0 \\
+HTUeuc-CIELM & 0 & 24 & 1 \\
+EERacc-C4.5w & 0 & 35 & 0 \\
+DWmah-C4.5w & 0 & 64 & 22 \\
+DWman-C4.5w & 0 & 64 & 21 \\
+DWeuc-C4.5w & 0 & 60 & 17 \\
+Mar-C4.5w  & 0 & 40 & 0 \\
+Ent-C4.5w  & 0 & 37 & 1 \\
+SGmulti-C4.5w & 0 & 31 & 0 \\
+EERacc-5NN & 0 & 51 & 2 \\
+DWmah-5NN  & 0 & 52 & 4 \\
+Mar-SVM    & 0 & 31 & 2 \\
+SGmulti-SVM & 0 & 59 & 1 \\
+\end{tabular}
+}
+\label{contaFriedPares}
+\end{center}
+\end{table}
